internal/controller/test_data/minimal-atom/expected-output/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minimal-atom
  namespace: default
  annotations:
    uptime.pdok.nl/id: 3ffebdf07a34c3d11a8396af8398877b41b148f6
    uptime.pdok.nl/name: service-title ATOM
    uptime.pdok.nl/url: https://test.com/path/index.xml
    uptime.pdok.nl/tags: public-stats,test
  labels:
    test: test
    pdok.nl/app: atom-service
  ownerReferences:
    - apiVersion: pdok.nl/v3
      kind: Atom
      name: minimal
      uid: ""
      blockOwnerDeletion: true
      controller: true
spec:
  routes:
    - kind: Rule
      match: (Host(`localhost`) || Host(`test.com`)) && Path(`/path/index.xml`)
      services:
        - kind: Service
          name: minimal-atom
          port: 80
      middlewares:
        - name: minimal-atom-headers
        - name: minimal-atom-prefixstrip
    - kind: Rule
      match: (Host(`localhost`) || Host(`test.com`)) && Path(`/path/feed.xml`)
      services:
        - kind: Service
          name: minimal-atom
          port: 80
      middlewares:
        - name: minimal-atom-headers
        - name: minimal-atom-prefixstrip
    - kind: Rule
      match: (Host(`localhost`) || Host(`test.com`)) && PathPrefix(`/path/downloads/`)
      services:
        - kind: Service
          name: azure-storage
          port: azure-storage
          passHostHeader: false
      middlewares:
        - name: minimal-atom-headers
        - name: minimal-atom-downloads-0
