internal/controller/test_data/minimal-atom/expected-output/middleware-downloads-0.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: minimal-atom-downloads-0
  namespace: default
  labels:
    test: test
    pdok.nl/app: atom-service
  ownerReferences:
    - apiVersion: pdok.nl/v3
      kind: Atom
      name: minimal
      uid: ""
      blockOwnerDeletion: true
      controller: true
spec:
  replacePathRegex:
    regex: ^(/path)/downloads/(file.ext)
    replacement: /container/prefix/$2
