internal/controller/test_data/minimal-atom/expected-output/middleware-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: minimal-atom-headers
  namespace: default
  labels:
    test: test
    app: atom-service
  ownerReferences:
    - apiVersion: pdok.nl/v3
      kind: Atom
      name: minimal
      uid: ""
      blockOwnerDeletion: true
      controller: true
spec:
  headers:
    customResponseHeaders:
      Access-Control-Allow-Headers: Content-Type
      Access-Control-Allow-Method: GET, OPTIONS, HEAD
      Access-Control-Allow-Origin: "*"
    contentSecurityPolicy: "default-src 'self';"
    frameDeny: true
