internal/controller/test_data/minimal-atom/expected-output/middleware-prefixstrip.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: minimal-atom-prefixstrip
  namespace: test
  labels:
    test: test
    app: atom-service
  ownerReferences:
    - apiVersion: pdok.nl/v3
      kind: Atom
      name: minimal
      uid: ""
      blockOwnerDeletion: true
      controller: true
spec:
  stripPrefix:
    prefixes:
      - /path/
